--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.7.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.4.0",
+    "mariadb": "^3.0.0",
     "sequelize": "^6.13.0",
     "sequelize-cli": "^6.3.0",
     "sqlite3": "^5.0.2",
